@@ -3,6 +3,7 @@ C5 @ BBoxWithin(ENVELOPE(-6, 6, 6, -6))
 C10 @ Contains(ENVELOPE(-6, 6, 6, -6))
 C10 @ IsEqualTo(ENVELOPE(-10, 10, 10, -10))
 C5 C10 @ Intersects(ENVELOPE(-2, 2, 2, -2))
-C5 C10 @ Overlaps(ENVELOPE(-2, 2, 2, -2))
+ @ Overlaps(ENVELOPE(-2, 2, 2, -2))
+C5 @ Overlaps(ENVELOPE(-2, 2, 8, -2))
 C5 C10 @ BBoxIntersects(ENVELOPE(-2, 2, 2, -2))
 NW15 @ IsDisjointTo(ENVELOPE(-10, 10, 10, -10))
